# Crypto_GPT_Analysis

./: README.md  excercise.ipynb  main.py  pyproject.toml
