[tool.poetry]
name = "stock-chat"
version = "0.1.0"
description = ""
authors = ["Richard <getrt1991@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_chat"}]

[tool.poetry.dependencies]
python = "3.9.6"
langchain = "^0.0.268"
bs4 = "^0.0.1"
requests = "^2.31.0"
streamlit = "^1.25.0"
"googlesearch.py" = "^1.6.1"
googlesearch-python = "^1.2.3"
yfinance = "^0.2.28"
openai = "^0.27.8"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
