[tool.poetry]
name = "gpt-crypto-analysis"
version = "0.1.0"
description = ""
authors = ["Richard Tsai <getrt1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
jupyter = "^1.0.0"
langchain = "^0.0.285"
ipykernel = "^6.25.2"
pandas = "^2.1.0"
plotly = "^5.16.1"
streamlit = "^1.26.0"
googlesearch-python = "^1.2.3"
openai = "^0.28.0"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
